# neural-object-xtraction

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  track_anything.py
tools/: base_segmenter.py  interact_tools.py  painter.py
tracker/: base_tracker.py
tracker/config/: config.yaml
tracker/inference/: inference_core.py  kv_memory_store.py  memory_manager.py
tracker/model/: cbam.py  group_modules.py  losses.py  memory_util.py  modules.py  network.py  resnet.py  trainer.py
tracker/util/: mask_mapper.py
